Added change user password, role, status and show all users functionality. Changed controller including router type JSON. Added order creation functionality (pick services, date, time, show order's data).